--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swiper": "^12.0.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.2",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
