--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"biome:check": "exec biome check --write",
+		"biome:lint": "exec biome lint  --write",
+		"biome:format": "exec biome format --write"
 	},
 	"dependencies": {
 		"html-to-image": "^1.11.13",
