--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 		"biome:format": "exec biome format --write"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.24.1",
+		"cors": "^2.8.5",
+		"dotenv": "^17.2.3",
+		"express": "^5.1.0",
 		"html-to-image": "^1.11.13",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
@@ -21,7 +25,9 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.2",
 		"@eslint/js": "^9.36.0",
-		"@types/node": "^24.6.0",
+		"@types/cors": "^2.8.19",
+		"@types/express": "^5.0.5",
+		"@types/node": "^24.9.2",
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
 		"@vitejs/plugin-react-swc": "^4.1.0",
@@ -29,6 +35,7 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.22",
 		"globals": "^16.4.0",
+		"ts-node": "^10.9.2",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.45.0",
 		"vite": "^7.1.7"
