--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"html-to-image": "^1.11.13",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"react-hook-form": "^7.66.0",
 		"swiper": "^12.0.3"
 	},
 	"devDependencies": {
