--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.3",
 		"express": "^5.1.0",
+		"hono": "^4.10.4",
 		"html-to-image": "^1.11.13",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
@@ -44,6 +45,7 @@
 		"ts-node": "^10.9.2",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.45.0",
-		"vite": "^7.1.7"
+		"vite": "^7.1.7",
+		"wrangler": "^4.45.3"
 	}
 }
