--- a/server/tsconfig.server.json
+++ b/server/tsconfig.server.json
@@ -7,7 +7,5 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true
 	},
-	"include": [
-		"./**/*.ts"
-	]
+	"include": ["./**/*.ts"]
 }
