--- a/.github/workflows/deploy-server-worker.yml
+++ b/.github/workflows/deploy-server-worker.yml
@@ -1,4 +1,3 @@
-# worker.tsに変更を加えた時にデプロイが走るようにするためのactions
 name: Deploy Cloudflare Worker
 
 on:
@@ -6,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - "worker.ts"          
-      - "wrangler.toml"      # 環境設定の変更時も実行させる
+      - "worker.ts"
+      - "wrangler.toml"
 
 jobs:
   deploy:
@@ -21,12 +20,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
+          cache: "pnpm"
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Deploy to Cloudflare Workers
-        run: npx wrangler deploy
+        run: pnpm wrangler deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
