--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"biome:check": "exec biome check --write",
 		"biome:lint": "exec biome lint  --write",
 		"biome:format": "exec biome format --write",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"dependencies": {
 		"@google/genai": "^1.28.0",
@@ -33,6 +35,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.2",
 		"@eslint/js": "^9.36.0",
+		"@storybook/react-vite": "^10.0.4",
 		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.5",
 		"@types/node": "^24.9.2",
@@ -42,9 +45,11 @@
 		"eslint": "^9.36.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.22",
+		"eslint-plugin-storybook": "^10.0.4",
 		"globals": "^16.4.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.6",
+		"storybook": "^10.0.4",
 		"ts-node": "^10.9.2",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.45.0",
