workflow: enable manual trigger for deployment

--- a/.github/workflows/deploy-server-worker.yml
+++ b/.github/workflows/deploy-server-worker.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - "src/worker.ts"
       - "wrangler.toml"
-
+  workflow_dispatch : {}
 jobs:
   deploy:
     runs-on: ubuntu-latest
