fix: update deployment command to use default worker file

--- a/.github/workflows/deploy-server-worker.yml
+++ b/.github/workflows/deploy-server-worker.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Deploy to Cloudflare Workers
         working-directory: .
-        run: pnpm wrangler deploy src/worker.ts
+        run: pnpm wrangler deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
