--- a/.github/workflows/deploy-server-worker.yml
+++ b/.github/workflows/deploy-server-worker.yml
@@ -32,8 +32,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Deploy to Cloudflare Workers
-        working-directory: .
-        run: pnpm wrangler deploy
+        run: pnpm wrangler deploy src/worker.ts --config ./wrangler.toml
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
