fix: update checkout path and working directory for deployment steps

--- a/.github/workflows/deploy-server-worker.yml
+++ b/.github/workflows/deploy-server-worker.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          path: .
+          path: ..
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -31,10 +31,12 @@ jobs:
           cache: "pnpm"
 
       - name: Install dependencies
+        working-directory: ../fake-quotes
         run: pnpm install --frozen-lockfile
 
       - name: Deploy to Cloudflare Workers
-        run: pnpm wrangler deploy src/worker.ts --config ./wrangler.toml
+        working-directory: ../fake-quotes
+        run: pnpm wrangler deploy src/worker.ts --config wrangler.toml
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
