fix: add debug step to display current working directory and files

--- a/.github/workflows/deploy-server-worker.yml
+++ b/.github/workflows/deploy-server-worker.yml
@@ -28,6 +28,12 @@ jobs:
           node-version: 22
           cache: "pnpm"
 
+      - name: Debug working directory
+        run: |
+          echo "Current path: $(pwd)"
+          echo "Files:"
+          ls -R
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
